macros/tests/ui/command_handlers_must_be_inside_gprogram_2.rs
use gprogram_framework_macros::{command_handlers, gprogram};

#[gprogram]
mod gprogram {
    use super::*;

    mod nested {
        use super::*;

        command_handlers!(
            fn set_value(value: u32) -> Result<(), ()> {
                Ok(())
            }
        );
    }
}

fn main() {}
